--- a/src/app/modules/dashboard/user/user.component.html
+++ b/src/app/modules/dashboard/user/user.component.html
@@ -8,8 +8,9 @@
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <ng-template matExpansionPanelContent>
-                <div class="shop"><a [routerLink]="['/dashboard/shop']">Take me
-                        to the shop</a> &#8658;</div>
+                <div class="shop"><button mat-button class="btn btn-default"
+                        [routerLink]="['/dashboard/shop']">{{'shop.takeShop' | translate}}</button>
+                </div>
             </ng-template>
         </mat-expansion-panel>
         <mat-expansion-panel class="accor w3-animate-top">
