--- a/src/app/modules/dashboard/sell/sell.component.scss
+++ b/src/app/modules/dashboard/sell/sell.component.scss
@@ -1,3 +1,11 @@
+form {
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
 .text-center p {
   font-size: 10px;
 }
