--- a/src/app/modules/dashboard/product/product.component.html
+++ b/src/app/modules/dashboard/product/product.component.html
@@ -68,7 +68,7 @@
 
         <!-- Seller Description -->
         <div class="product-description" *ngIf="product">
-            <span>{{'product.sellerId' | translate}}</span>
+            <span style="color: black;"><strong>{{'product.sellerId' | translate}}</strong></span>
             <p>{{product.soldBy}}<br><span
                     style="text-transform: none; cursor: pointer;">{{'product.sellerDetail' | translate}}</span></p>
         </div>
