--- a/src/app/modules/dashboard/purchase/purchase.component.html
+++ b/src/app/modules/dashboard/purchase/purchase.component.html
@@ -1,72 +1,1 @@
-<div class="empty" *ngIf="itemsForSale.length===0">
-    <p>{{'shop.noProducts' | translate}}</p>
-</div>
-
-<div class="prod-list" *ngIf="itemsForSale.length>0">
-    <div class="prod-cont" *ngFor="let item of itemsForSale">
-        <div class="card">
-            <div id="carousel-example-generic" class="carousel slide"
-                data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#carousel-example-generic"
-                        data-slide-to="0" class="active" *ngIf="item.picture1">
-                    </li>
-                    <li data-target="#carousel-example-generic"
-                        data-slide-to="1" *ngIf="item.picture1">
-                    </li>
-                    <li data-target="#carousel-example-generic"
-                        data-slide-to="2" *ngIf="item.picture2">
-                    </li>
-                    <li data-target="#carousel-example-generic"
-                        data-slide-to="3" *ngIf="item.picture3">
-                    </li>
-                    <li data-target="#carousel-example-generic"
-                        data-slide-to="4" *ngIf="item.picture4">
-                    </li>
-                </ol>
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <img [src]="item.picture0" alt="First image"
-                            style="width: 300px; height: 350px; min-height: 350px;">
-                    </div>
-                    <div class="item" *ngIf="item.picture1">
-                        <img [src]="item.picture1" alt="Second image"
-                            style="width: 300px; height: 350px; min-height: 350px;">
-                    </div>
-                    <div class="item" *ngIf="item.picture2">
-                        <img [src]="item.picture2" alt="Third image"
-                            style="width: 300px; height: 350px; min-height: 350px;">
-                    </div>
-                    <div class="item" *ngIf="item.picture3">
-                        <img [src]="item.picture3" alt="Fourth image"
-                            style="width: 300px; height: 350px; min-height: 350px;">
-                    </div>
-                    <div class="item" *ngIf="item.picture4">
-                        <img [src]="item.picture4" alt="Fifth image"
-                            style="width: 300px; height: 350px; min-height: 350px;">
-                    </div>
-                </div>
-                <!-- Controls -->
-                <a class="left carousel-control"
-                    href="#carousel-example-generic" data-slide="prev"
-                    *ngIf="item.picture1">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control"
-                    href="#carousel-example-generic" data-slide="next"
-                    *ngIf="item.picture1">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
-            </div>
-
-            <div (click)="viewProduct(item._id)" style="cursor: pointer;">
-                <h3>{{item.title}}</h3>
-                <p class="price">&#8377; {{item.price}} {{item.unit}}</p>
-            </div>
-            <!-- <p>{{item.desc}}</p> -->
-            <p><button>{{'shop.buy' | translate}}</button></p>
-        </div>
-    </div>
-</div>
+<app-product-list [products]="itemsForSale"></app-product-list>
