--- a/src/app/modules/dashboard/purchase/purchase.component.html
+++ b/src/app/modules/dashboard/purchase/purchase.component.html
@@ -1,1 +1,1 @@
-<app-product-list [products]="itemsForSale"></app-product-list>
+<app-product-list [products]="itemsForSale" [productType]="'sell'"></app-product-list>
