--- a/src/app/modules/dashboard/rent/rent.component.html
+++ b/src/app/modules/dashboard/rent/rent.component.html
@@ -1,1 +1,1 @@
-<app-product-list [products]="itemsForRent"></app-product-list>
+<app-product-list [products]="itemsForRent" [productType]="'rent'"></app-product-list>
